# rag-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml
docs/: ai-engineer-guide.md  ai-learning-guide.md  ai-theory-roadmap.md  api-reference.md  architecture.md  aws-cloud-labs-results.md  aws-services.md  azure-services.md  cicd.md  cost-analysis.md  debugging-guide.md  getting-started.md  learning-plan.md  monitoring.md  poetry-guide.md  pydantic-models.md  rag-concepts.md  reading-order.md  terraform.md
docs/ai-engineering/: cost-analysis.md  evaluation-framework-deep-dive.md  evaluation-metrics.md  golden-dataset-deep-dive.md  ingestion-pipeline-deep-dive.md  llm-interface-deep-dive.md  llm-providers-deep-dive.md  metrics-deep-dive.md  prompts-deep-dive.md  rag-chain-deep-dive.md  rag-concepts.md  testing.md  vectorstore-interface-deep-dive.md  vectorstore-providers-deep-dive.md
docs/architecture-and-design/: api-routes-explained.md  architecture.md  aws-services.md  azure-services.md  cicd-explained.md  history-explained.md  how-services-work.md  infra-explained.md  storage-explained.md
docs/hands-on-labs/: hands-on-labs-phase-1.md  hands-on-labs-phase-2.md  hands-on-labs-phase-3.md  hands-on-labs-phase-4.md  hands-on-labs-phase-5.md  how-to-read-the-labs.md
docs/reference/: api-reference.md  monitoring.md  pydantic-models.md
docs/setup-and-tooling/: debugging-guide.md  getting-started.md  poetry-guide.md  terraform-guide.md
infra/aws/: budget.tf  dynamodb.tf  ecr.tf  iam.tf  locals.tf  main.tf  outputs.tf  s3.tf  terraform.tf  variables.tf
infra/azure/: acr.tf  budget.tf  cosmosdb.tf  locals.tf  main.tf  outputs.tf  resource_group.tf  storage.tf  terraform.tf  variables.tf
scripts/: bulk_upload.py  generate_portfolio_pdfs.py  lab_analysis.py  run_all_labs.py  run_cloud_labs.sh  start-resilient-server.sh
scripts/config/: __init__.py  test_data_loader.py
scripts/lab_results/: .gitignore  local-vs-azure-comparison.md
scripts/test-data/: test-policy.txt
src/: config.py  main.py
src/api/: models.py
src/evaluation/: __init__.py  evaluator.py  golden_dataset.py
src/guardrails/: __init__.py  aws_guardrails.py  azure_guardrails.py  base.py  local_guardrails.py
src/history/: aws_dynamodb.py  azure_cosmosdb.py  base.py
src/llm/: aws_bedrock.py  azure_openai.py  base.py  local_ollama.py
src/monitoring/: metrics.py  query_logger.py  tracing.py
tests/: conftest.py  test_chat.py  test_dynamodb_vectorstore.py  test_e2e_rag_pipeline.py  test_evaluate_route.py  test_evaluation.py  test_guardrails.py  test_hybrid_search.py  test_ingestion.py  test_integration_api.py  test_integration_features.py  test_reranker.py
(+30 files in other folders)
